# oxidegl

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md  install.sh
.cargo/: config.toml
oxidegl/: Cargo.toml  build.rs
oxidegl-macros/: Cargo.toml
oxidegl-macros/src/: lib.rs
oxidegl/src/: device_properties.rs  entry_point.rs  enums.rs  generated.rs  lib.rs  nsgl_shim.rs  util.rs
oxidegl/src/context/: debug.rs  error.rs  framebuffer.rs  gl_object.rs  logging.rs  mod.rs  pixel.rs  platform.rs  program.rs  shader.rs  state.rs  texture.rs  vao.rs
oxidegl/src/context/commands/: buffer.rs  buffers.rs  caps.rs  clear.rs  debug.rs  draw.rs  get.rs  misc.rs  mod.rs  programs.rs  shaders.rs  unimplemented.rs  vao.rs  vaos.rs
oxidegl/src/context/pixel/: internal_formats.rs
oxidegl/src/context/state/: item.rs
oxidegl/src/dispatch/: conversions.rs  gl_core.rs  gl_types.rs  gltypes.rs  mod.rs
oxidegl/src/gl/: gl_core.rs  gltypes.rs  mod.rs
src/: enums.rs  lib.rs
src/context/: context_state.rs  dispatch_unused.rs  get.rs  metal_view.rs  mod.rs  platform.rs  render.rs  state.rs  unimplemented.rs
src/context/commands/: get.rs
src/context/state/: item.rs
src/gl/: gl_core.rs
tests/HelloTriangle/: Makefile  glad.c  hello_colorful_triangle.cpp  shader_triangle.frag  shader_triangle.vert
tests/HelloTriangle/include/: gl_utils.h
tests/HelloTriangle/include/glad/: glad.h
tests/fendevel_moderngl/: CMakeLists.txt  conanfile.txt
tests/fendevel_moderngl/source/: Texture.cpp
xtask/: Cargo.toml  enum_merges.txt  enum_overrides.txt  implemented.txt
xtask/src/: codegen.rs  doc_parse.rs  lib.rs  main.rs  spec_parse.rs  tasks.rs
