[package]
name = "oxidegl"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "specparse"

[dependencies]
crossbeam = "0.8.2"
glam = "0.24.1"
libc = "0.2.147"
metal = "0.25.0"
objc2 = "0.4.0"
once_cell = "1.18.0"
roxmltree = "0.18.0"
strum = { version = "0.25.0", features = ["strum_macros"] }
strum_macros = "0.25.1"
state = { version = "0.6.0", features = ["tls"] }
icrate = { version = "0.0.3", features = [
    "AppKit",
    "CoreAnimation",
    "CoreAnimation_CALayer",
] }
