[package]
name = "oxidegl"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "specparse"
[[bin]]
name = "runtest"

[dependencies]
crossbeam = "0.8.2"
libc = "0.2.147"
objc2 = "0.5.2"
once_cell = "1.18.0"
roxmltree = "0.20.0"
strum = { version = "0.26.3", features = ["strum_macros"] }
strum_macros = "0.26.3"
state = { version = "0.6.0", features = ["tls"] }
log = "0.4.21"
objc2-app-kit = { version = "0.2.2", features = [
    "NSView",
    "NSResponder",
    "NSScreen",
    "objc2-quartz-core",
] }
objc2-metal = { version = "0.2.2", features = ["all"] }
objc2-quartz-core = { version = "0.2.2", features = [
    "objc2-metal",
    "CAMetalLayer",
    "CALayer",
] }
objc2-foundation = "0.2.2"
