[package]
name = "oxidegl"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["cdylib"]

# Lock MacOS-Only dependencies to the platform, ensuring an early compile error 
# if someone tries to build this on a non-Mac system
[target.'cfg(target_os = "macos")'.dependencies]
# Objective C Base
objc2 = "0.5.2"
# Need to speak Cocoa for interacting with window layers
objc2-app-kit = { version = "0.2.2", features = [
    "NSView",
    "NSResponder",
    "NSScreen",
    "objc2-quartz-core",
] }
# Need to speak Metal for... well... doing graphics
objc2-metal = { version = "0.2.2", features = ["all"] }
# Need to speak CoreAnimation for creating and setting backing layers
objc2-quartz-core = { version = "0.2.2", features = [
    "objc2-metal",
    "CAMetalLayer",
    "CALayer",
] }
objc2-foundation = "0.2.2"

# Need access to raw vm_allocate for [MTLDevice newBufferWithBytesNoCopy];
machx = "0.4.9"

[dependencies]
# Logging
log = "0.4.21"
flexi_logger = "0.28"

# Bitflags for GL Bitmasks
bitflags = "2.6.0"
# Fast hashmap
ahash = "0.8.11"
# Macro utilities
concat-idents = "1.1.5"
# FromRepr used for checked GLenum wrapper creation
strum_macros = "0.26.3"
# Used for const str/[u8] appending for commit hash/version constants
constcat = "0.5.0"
# Used for glsl/spv -> MSL shader conversion
naga = { version = "22.0.0", features = ["glsl-in", "spv-in", "msl-out"] }

# Expose max log level features
[features]
max_log_trace = ["log/max_level_trace"]
max_log_debug = ["log/max_level_debug"]
max_log_info = ["log/max_level_info"]
max_log_warn = ["log/max_level_warn"]
max_log_error = ["log/max_level_error"]
max_log_off = ["log/max_level_off"]
