[package]
name = "oxidegl"
version = "0.0.1"
edition = "2024"
[lib]
crate-type = ["cdylib"]


[dependencies]
# MacOS deps

# Objective C Base
objc2 = "0.6.0"

# Need to speak Metal for... well... doing graphics
objc2-metal = { version = "0.3.0" }

# Need to speak Cocoa to interact with windows and layers
objc2-app-kit = { default-features = false, version = "0.3.0", features = [
    "std",
    "objc2-core-foundation",
    "NSView",
    "NSWindow",
    "NSResponder",
    "objc2-quartz-core",
] }

# Need to speak CoreAnimation for CAMetalLayer
objc2-quartz-core = { default-features = false, version = "0.3.0", features = [
    "std",
    "objc2-core-foundation",
    "objc2-metal",
    "CAMetalLayer",
    "CALayer",
] }
# needed for MainThreadMarker/`is_main_thread` and ProcessInfo to get the MacOS version
objc2-foundation = { default-features = false, version = "0.3.0", features = [
    "std",
    "NSProcessInfo",
] }

# Need access to raw mach vm_allocate for [MTLDevice newBufferWithBytesNoCopy]
# mach2 = { git = "https://github.com/JohnTitor/mach2/" }


# General deps
# FromRepr used for checked GLenum wrapper creation
strum_macros = "0.27.1"

# Logging
log = "0.4.21"
flexi_logger = "0.29"

# Bitflags for GL Bitmasks
bitflags = "2.6.0"
# Fast hash function
ahash = "0.8.11"
# Macro utilities
concat-idents = "1.1.5"
# Used for const str/[u8] appending for commit hash/version constants
constcat = "0.6.0"

# Used for crimes (nsgl_shim)
ctor = { version = "0.4.1", optional = true }
core-foundation-sys = { version = "0.8.7", optional = true }
libc = { version = "0.2.158", optional = true }

# SPIR-V -> MSL conversion
spirv-cross2 = { version = "0.4.4", default-features = false, features = [
    "msl",
] }
# GLSL -> SPIR-V conversion
glslang = "0.6.1"

# used to optimize for the hot path in `with_context`
likely_stable = "0.1.2"
half = "2.4.1"

[build-dependencies]
# you do not want to know what this is for
deterministic-hash = "1.0.1"

# Expose max log level features
[features]
default = ["nsgl_shim"]
max_log_trace = ["log/max_level_trace"]
max_log_debug = ["log/max_level_debug"]
max_log_info = ["log/max_level_info"]
max_log_warn = ["log/max_level_warn"]
max_log_error = ["log/max_level_error"]
max_log_off = ["log/max_level_off"]

nsgl_shim = ["dep:ctor", "dep:core-foundation-sys", "dep:libc"]
unsound_noerror = []
