[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
devx-cmd = "0.5.0"
devx-pre-commit = "0.5.0"
roxmltree = "0.20.0"
simple_logger = "5.0.0"
strum = { version = "0.26.3", features = ["strum_macros"] }
strum_macros = "0.26.3"
