[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
dashmap = "6.0.1"
enum_dispatch = "0.3.13"
log = "0.4.22"
roxmltree = "0.20.0"
simple_logger = "5.0.0"
strum = { version = "0.26.3", features = ["strum_macros"] }
strum_macros = "0.26.3"
