[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.7", features = ["derive"] }
const_format = "0.2.32"
dashmap = "6.0.1"
enum_dispatch = "0.3.13"
log = "0.4.22"
roxmltree = "0.20.0"
simple_logger = "5.0.0"
strum = { version = "0.26.3", features = ["strum_macros"] }
strum_macros = "0.26.3"
